Finished Jumborton section

--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mountain Travel</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- Forked from a template on Tutorialzine: https://tutorialzine.com/2016/06/freebie-landing-page-template-with-flexbox -->
-  <h1>Sample Project</h1>
+<section class="jumbotron">
+  <nav>
+    <div class="logo">Mountain Travel</div>
+    <div class="nav-links">
+      <div><a href="">Tours</a></div>
+      <div><a href="">About</a></div>
+      <div><a href="">Contact Us</a></div>
+    </div>
+  </nav>
+
+  <main>
+    <h1>Mountain Travel</h1>
+    <p>Unmissable Adventure Tours Around The World</p>
+    <button type="button" name="button">CONTACT US NOW</button>
+  </main>
+</section>
+
 </body>
 </html>
