Finished Destinations Section

--- a/index.html
+++ b/index.html
@@ -28,5 +28,22 @@
   </main>
 </section>
 
+<section class="destinations">
+  <header>
+    <h1>Some Of Our Destinations</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      Morbi viverra lacus a neque vulputate viverra. Sed fringilla
+      aliquam augue nec dictum.
+    </p>
+    <div class="line"></div>
+  </header>
+  <main>
+    <img src="./assets/img/mountain1.jpg" alt="mountain scene 1">
+    <img src="./assets/img/mountain2.jpg" alt="mountain scene 2">
+    <img src="./assets/img/mountain3.jpg" alt="mountain scene 3">
+    <img src="./assets/img/mountain4.jpg" alt="mountain scene 4">
+  </main>
+</section>
 </body>
 </html>
