Finished features-services section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -36,7 +37,7 @@
       Morbi viverra lacus a neque vulputate viverra. Sed fringilla
       aliquam augue nec dictum.
     </p>
-    <div class="line"></div>
+    <hr class="line"></hr>
   </header>
   <main>
     <img src="./assets/img/mountain1.jpg" alt="mountain scene 1">
@@ -45,5 +46,56 @@
     <img src="./assets/img/mountain4.jpg" alt="mountain scene 4">
   </main>
 </section>
+
+<section class="features-services">
+  <header>
+      <h1>Features And Services</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Morbi viverra lacus a neque vulputate viverra. Sed fringilla
+        aliquam augue nec dictum.
+      </p>
+      <hr class="line"></hr>
+    </header>
+    <main>
+      <div class="feature">
+        <i class="fa fa-compass fa-4x"></i>
+        <h4>Guided Trips</h4>
+        <p class="lead">
+          Vestibulum tellus ligula, eleifend a justo nec,
+          mattis sollicitudin mi. Vivamus non nisi neque.
+          Nullam libero odio, tincidunt nec, semper at ligula.
+        </p>
+      </div>
+      <div class="feature">
+        <i class="fa fa-camera fa-4x"></i>
+        <h4>Photo Trips</h4>
+        <p class="lead">
+          Vestibulum tellus ligula, eleifend a justo nec,
+          mattis sollicitudin mi. Vivamus non nisi neque.
+          Nullam libero odio, tincidunt nec, semper at ligula.
+        </p>
+      </div>
+      <div class="feature">
+        <i class="fa fa-bicycle fa-4x"></i>
+        <h4>Biking Trips</h4>
+        <p class="lead">
+          Vestibulum tellus ligula, eleifend a justo nec,
+          mattis sollicitudin mi. Vivamus non nisi neque.
+          Nullam libero odio, tincidunt nec, semper at ligula.
+        </p>
+      </div>
+      <div class="feature">
+        <i class="fa fa-flag-checkered fa-4x"></i>
+        <h4>Racing Trips</h4>
+        <p class="lead">
+          Vestibulum tellus ligula, eleifend a justo nec,
+          mattis sollicitudin mi. Vivamus non nisi neque.
+          Nullam libero odio, tincidunt nec, semper at ligula.
+        </p>
+      </div>
+    </main>
+</section>
+
 </body>
 </html>
