Finished testimonials section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </header>
     <main>
       <div class="feature">
-        <i class="fa fa-compass fa-4x"></i>
+        <i class="fa fa-compass fa-3x"></i>
         <h4>Guided Trips</h4>
         <p class="lead">
           Vestibulum tellus ligula, eleifend a justo nec,
@@ -68,7 +68,7 @@
         </p>
       </div>
       <div class="feature">
-        <i class="fa fa-camera fa-4x"></i>
+        <i class="fa fa-camera-retro fa-3x"></i>
         <h4>Photo Trips</h4>
         <p class="lead">
           Vestibulum tellus ligula, eleifend a justo nec,
@@ -77,7 +77,7 @@
         </p>
       </div>
       <div class="feature">
-        <i class="fa fa-bicycle fa-4x"></i>
+        <i class="fa fa-bicycle fa-3x"></i>
         <h4>Biking Trips</h4>
         <p class="lead">
           Vestibulum tellus ligula, eleifend a justo nec,
@@ -86,7 +86,7 @@
         </p>
       </div>
       <div class="feature">
-        <i class="fa fa-flag-checkered fa-4x"></i>
+        <i class="fa fa-flag-checkered fa-3x"></i>
         <h4>Racing Trips</h4>
         <p class="lead">
           Vestibulum tellus ligula, eleifend a justo nec,
@@ -95,6 +95,35 @@
         </p>
       </div>
     </main>
+</section>
+
+<section class="testimonials">
+  <header>
+      <h1>Testimonials From Our Adventurers</h1>
+      <hr class="line"></hr>
+  </header>
+    <div class="testimonial-list">
+      <p class="quote">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Morbi viverra lacus a neque vulputate viverra. Sed fringilla
+        aliquam augue nec dictum.
+      </p>
+      <p class="author">— John Doe</p>
+
+      <p class="quote">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Morbi viverra lacus a neque vulputate viverra. Sed fringilla
+        aliquam augue nec dictum.
+      </p>
+      <p class="author">— Bill Smith</p>
+
+      <p class="quote">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Morbi viverra lacus a neque vulputate viverra. Sed fringilla
+        aliquam augue nec dictum.
+      </p>
+      <p class="author">— Jane Sanders</p>
+    </div>
 </section>
 
 </body>
