Finished learn-more section

--- a/index.html
+++ b/index.html
@@ -126,5 +126,21 @@
     </div>
 </section>
 
+<section class="learn-more">
+  <header>
+      <h1>Learn More</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Morbi viverra lacus a neque vulputate viverra. Sed fringilla
+        aliquam augue nec dictum.
+      </p>
+      <hr class="line"></hr>
+  </header>
+  <form>
+		<input type="email" placeholder="Email">
+		<a href="#" class="btn">Subscribe now</a>
+	</form>
+</section>
+
 </body>
 </html>
