--- a/index.html
+++ b/index.html
@@ -138,9 +138,22 @@
   </header>
   <form>
 		<input type="email" placeholder="Email">
-		<a href="#" class="btn">Subscribe now</a>
+		<a href="#">Subscribe now</a>
 	</form>
 </section>
+
+<footer>
+  <p>Images Courtesy of Unsplash.</p>
+  <p>
+    Why are you even reading this?!
+    There's never anything interesting in the footer!
+  </p>
+  <div class="social-links">
+    <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
+    <a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
+    <a href="#"><i class="fa fa-snapchat-square fa-3x"></i></a>
+  </div>
+</footer>
 
 </body>
 </html>
